<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation, MissingTranslation">
    <string name="app_name">AgileDevKt</string>
    <string name="app_img_name">图片</string>
    <string name="splash_title">AgileDevKt测试工程</string>
    <string name="splash_check_permission_tips">请在权限页面打开应用所有权限</string>
    <string name="splash_check_permission_title">请确认已打开该应用使用的所有权限</string>
    <string name="splash_check_permission_confirm">已确认</string>
    <string name="splash_check_permission_unconfirmed">再次确认</string>
    <string name="splash_check_permission_cancel">请在设置中打开权限后重启应用</string>
    <string name="main_title">功能模块</string>
    <string name="main_change_mood">换个心情</string>
    <string name="main_try_compose">试试Compose</string>
    <string name="test_author">作者：%s</string>
    <string name="test_alert">我的名字叫%1$s，我来自%2$s</string>
    <string name="file_create_new_file">创建一个文件</string>
    <string name="file_create_directory">创建一个文件夹</string>
    <string name="file_exists">文件（文件夹）是否存在</string>
    <string name="file_rename">重命名文件（文件夹）</string>
    <string name="file_delete_suffix_jpg">删除jpg后缀文件</string>
    <string name="file_move">移动文件</string>
    <string name="file_copy">复制文件</string>
    <string name="file_get_length">获取路径下的文件总大小</string>
    <string name="file_delete_path">删除路径下文件</string>
    <string name="file_save_by_bytes">将文件保存为byte数组并保存到其他路径</string>
    <string name="file_save_bitmap">bitmap转文件</string>
    <string name="file_to_base64">文件转Base64</string>
    <string name="base64_to_file">Base64转文件</string>
    <string name="file_video_no_found">目录下未找到video.mp4</string>
    <string name="file_read_content">读取文件内容</string>
    <string name="file_write_content_end">写入文件结尾</string>
    <string name="file_write_content_start">写入文件开头</string>
    <string name="security_hint">请输入加密内容</string>
    <string name="security_AES_encrypt">AES加密</string>
    <string name="security_AES_decrypt">AES解密</string>
    <string name="security_AES_init">AES秘钥初始化</string>
    <string name="security_RSA_encrypt">RSA公钥加密</string>
    <string name="security_RSA_decrypt">RSA私钥解密</string>
    <string name="security_RSA_init">RSA秘钥初始化</string>
    <string name="security_MD5_btn">MD5信息摘要</string>
    <string name="security_SHA1_btn">SHA1信息摘要</string>
    <string name="security_clean">清空</string>
    <string name="bitmap_src_name">原图片</string>
    <string name="bitmap_src_base64">Base64编码图片</string>
    <string name="bitmap_drawable_name">drawable图片</string>
    <string name="bitmap_drawable_to">drawable转bitmap</string>
    <string name="bitmap_view_name">view图片</string>
    <string name="bitmap_view_to">view转bitmap</string>
    <string name="bitmap_combine">合并图片</string>
    <string name="bitmap_grey">灰度图</string>
    <string name="bitmap_rounded_corner">圆角图</string>
    <string name="bitmap_rounded">圆形图</string>
    <string name="bitmap_reflection">倒影图</string>
    <string name="bitmap_rotate_45">旋转45°</string>
    <string name="bitmap_reverse_horizontal">水平翻转</string>
    <string name="bitmap_reverse_vertical">垂直翻转</string>
    <string name="bitmap_tone">色调调整</string>
    <string name="bitmap_saturation">饱和度调整</string>
    <string name="bitmap_luminance">亮度值调整</string>
    <string name="bitmap_hue">色相值调整</string>
    <string name="bitmap_nostalgic">怀旧效果图片</string>
    <string name="bitmap_sunshine">光照强度调整</string>
    <string name="bitmap_film">底片效果图片</string>
    <string name="bitmap_sharpen">锐化效果图片</string>
    <string name="bitmap_emboss">浮雕效果图片</string>
    <string name="bitmap_long">长图</string>
    <string name="glide_custom_notify">自定义通知栏</string>
    <string name="glide_system_notify">原生通知栏</string>
    <string name="glide_video_file_unexists">视频文件不存在</string>
    <string name="notify_base">基本通知</string>
    <string name="notify_intent">带意图通知</string>
    <string name="notify_progress">带进度条</string>
    <string name="notify_single_txt">单行大文本样式</string>
    <string name="notify_multi_txt">多行大文本样式</string>
    <string name="notify_large_img">大图文本样式</string>
    <string name="notify_custom">自定义内容样式</string>
    <string name="notify_msg">跳转详情页通知</string>
    <string name="msg_detail_title">通知详情</string>
    <string name="toast_short_time">短时间</string>
    <string name="toast_long_time">长时间</string>
    <string name="toast_gravity_center">自定义位置（中间）</string>
    <string name="toast_top_drawable">带顶部图片</string>
    <string name="toast_custom">完全自定义</string>
    <string name="toast_custom_title">注意</string>
    <string name="toast_custom_content">我是内容</string>
    <string name="toast_io_thread">异步线程</string>
    <string name="toast_replace_forward">可覆盖前次</string>
    <string name="reflect_use_kclass">使用KClass</string>
    <string name="reflect_use_type">使用类型</string>
    <string name="reflect_get_class">获取Class</string>
    <string name="reflect_get_constructor_name">获取所有构造函数名称</string>
    <string name="reflect_get_field_name">获取对象里的变量名称</string>
    <string name="reflect_get_method_name">获取方法名</string>
    <string name="reflect_get_field_value">获取对象里变量的值</string>
    <string name="reflect_execute_function">执行无参函数</string>
    <string name="reflect_execute_param_function">执行有参函数</string>
    <string name="reflect_set_value">设置值并读取测试</string>
    <string name="reflect_unfind_class">找不到该类</string>
    <string name="reflect_unfind_no_param_constructor">没有无参构造函数</string>
    <string name="color_alpha">透明度：</string>
    <string name="color_input_hint">请输入颜色的透明度1~100</string>
    <string name="thread_pool_start">开始线程池</string>
    <string name="thread_pool_close">关闭线程池</string>
    <string name="thread_pool_clear">清空信息</string>
    <string name="idcard_input_title">身份证号：</string>
    <string name="idcard_input_hint">请输入身份证号</string>
    <string name="idcard_check">校验</string>
    <string name="idcard_empty_tips">请输入身份证号</string>
    <string name="idcard_length_error">请输入18位身份证号</string>
    <string name="idcard_illegal">您输入的不是身份证号</string>
    <string name="idcard_check_success">身份证号校验成功</string>
    <string name="idcard_province">省份：</string>
    <string name="idcard_sex">性别：</string>
    <string name="idcard_birth">出生年月日：</string>
    <string name="idcard_year">年：</string>
    <string name="idcard_month">月：</string>
    <string name="idcard_day">日：</string>
    <string name="idcard_age">年龄：</string>
    <string name="idcard_search">搜索</string>
    <string name="format_num_one">18.49382716</string>
    <string name="format_num_two">9.51839461</string>
    <string name="format_num_three">0.45179283</string>
    <string name="format_num_hint">请输入数字15位以内</string>
    <string name="format_num_to_chinese">转中文</string>
    <string name="selector_unable_switch">禁用开关</string>
    <string name="selector_select_switch">选中开关</string>
    <string name="selector_focused_switch">焦点开关</string>
    <string name="selector_pressed">正常+按压</string>
    <string name="selector_selected">正常+选中</string>
    <string name="selector_unable">正常+不可用</string>
    <string name="selector_focused">正常+焦点</string>
    <string name="selector_pressed_unable">正常+按压+不可用</string>
    <string name="selector_pressed_selected">正常+按压+选中</string>
    <string name="selector_pressed_focused">正常+按压+焦点</string>
    <string name="selector_unable_selected">正常+不可用+选中</string>
    <string name="selector_unable_focused">正常+不可用+焦点</string>
    <string name="selector_selected_focused">正常+选中+焦点</string>
    <string name="selector_pressed_unable_selected">正常+按压+不可用+选中</string>
    <string name="selector_pressed_unable_focused">正常+按压+不可用+焦点</string>
    <string name="selector_unable_selected_focused">正常+不可用+选中+焦点</string>
    <string name="selector_pressed_selected_focused">正常+按压+选中+焦点</string>
    <string name="selector_pressed_unable_selected_focused">正常+按压+不可用+选中+焦点</string>
    <string name="setting_refresh">刷新</string>
    <string name="setting_confirm">设置</string>
    <string name="setting_request_permission_tips">请您打开系统设置权限</string>
    <string name="setting_brightness_mode">设置亮度模式：</string>
    <string name="setting_brightness_mode_automatic">自动</string>
    <string name="dialog_normal">普通弹框</string>
    <string name="dialog_center">中间弹框</string>
    <string name="dialog_left">左侧弹框</string>
    <string name="dialog_right">右侧弹框</string>
    <string name="dialog_bottom">底部弹框</string>
    <string name="dialog_top">顶部弹框</string>
    <string name="coroutines_start">启动</string>
    <string name="coroutines_cancel">取消</string>
    <string name="coroutines_clean">清空</string>
    <string name="coroutines_main">主线程执行</string>
    <string name="coroutines_io">异步线程执行</string>
    <string name="coroutines_join">阻塞主线程等待协程执行</string>
    <string name="coroutines_repeat">协程执行重复数据</string>
    <string name="coroutines_timeout">超时限制</string>
    <string name="coroutines_channel">协程通道</string>
    <string name="coroutines_async">协程异步</string>
    <string name="coroutines_simple_flow">基础flow</string>
    <string name="bytes_transform">转换</string>
    <string name="bytes_input_num">输入数字</string>
    <string name="bytes_int_to_bytearray_hf">Int转ByteArray（高字节在前）：</string>
    <string name="bytes_int_to_bytearray_lf">Int转ByteArray（低字节在前）：</string>
    <string name="bytes_bytearray_hf_to_int">ByteArray（高字节在前）转Int：</string>
    <string name="bytes_bytearray_lf_to_int">ByteArray（低字节在前）转Int：</string>
    <string name="bytes_merge">线性合并：</string>
    <string name="bytes_array_to_buffer">ByteArray转ByteBuffer：</string>
    <string name="bytes_buffer_to_array">ByteBuffer转ByteArray：</string>
    <string name="bytes_array_to_int">ByteArray转Int：</string>
    <string name="bytes_array_to_short">ByteArray转Short：</string>
    <string name="bytes_array_to_long">ByteArray转Long：</string>
    <string name="bytes_array_to_float">ByteArray转Float：</string>
    <string name="bytes_array_to_double">ByteArray转Double：</string>
    <string name="bytes_array_to_shortarray">ByteArray转ShortArray：</string>
    <string name="bytes_shortarray_to_array">ShortArray转ByteArray：</string>
    <string name="extras_to_fragment">Fragment参数接收</string>
    <string name="extras_to_int">Int参数：</string>
    <string name="extras_to_short">Short参数：</string>
    <string name="extras_to_byte">Byte参数：</string>
    <string name="extras_to_char">Char参数：</string>
    <string name="extras_to_boolean">Boolean参数：</string>
    <string name="extras_to_long">Long参数：</string>
    <string name="extras_to_float">Float参数：</string>
    <string name="extras_to_double">Double参数：</string>
    <string name="extras_to_string">String参数：</string>
    <string name="extras_to_bundle">Bundle参数：</string>
    <string name="extras_to_charsequence">CharSequence参数：</string>
    <string name="extras_to_parcelablee">Parcelable参数：</string>
    <string name="extras_to_intarray">IntArray参数：</string>
    <string name="extras_to_shortarray">ShortArray参数：</string>
    <string name="extras_to_bytearray">ByteArray参数：</string>
    <string name="extras_to_chararray">CharArray参数：</string>
    <string name="extras_to_booleanarray">BooleanArray参数：</string>
    <string name="extras_to_longarray">LongArray参数：</string>
    <string name="extras_to_floatarray">FloatArray参数：</string>
    <string name="extras_to_doublearray">DoubleArray参数：</string>
    <string name="extras_to_stringarray">StringArray参数：</string>
    <string name="extras_to_parcelablearray">ParcelableArray参数：</string>
    <string name="extras_to_charsequencearray">CharSequenceArray参数：</string>
    <string name="extras_to_integerarraylist">IntegerArrayList参数：</string>
    <string name="extras_to_stringarraylist">StringArrayList参数：</string>
    <string name="extras_to_charsequencearraylist">CharSequenceArrayList参数：</string>
    <string name="extras_to_parcelablearraylist">ParcelableArrayList参数：</string>
    <string name="extras_to_serializable">Serializable参数：</string>
    <string name="arc_test_activity_title">测试Activity</string>
    <string name="arc_input_hint">请输入</string>
    <string name="arc_test_result">传递</string>
</resources>