<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/base_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_base" />

    <Button
        android:id="@+id/intent_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_intent" />

    <Button
        android:id="@+id/progress_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_progress" />

    <Button
        android:id="@+id/single_txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_single_txt" />

    <Button
        android:id="@+id/multi_txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_multi_txt" />

    <Button
        android:id="@+id/large_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_large_img" />

    <Button
        android:id="@+id/custom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_custom" />

</LinearLayout>