<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/short_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_short_time"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/long_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_long_time"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/custom_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_gravity_center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/top_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_top_drawable"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_custom"
        android:textAllCaps="false" />

</LinearLayout>