<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/main_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_main" />

            <RadioButton
                android:id="@+id/io_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_io" />

            <RadioButton
                android:id="@+id/join_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_join" />

            <RadioButton
                android:id="@+id/repeat_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_repeat" />

            <RadioButton
                android:id="@+id/timeout_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_timeout" />

            <RadioButton
                android:id="@+id/channel_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_channel" />

            <RadioButton
                android:id="@+id/async_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_async" />

            <RadioButton
                android:id="@+id/simple_flow_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines_simple_flow" />

        </RadioGroup>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_btn"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coroutines_start"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/coroutines_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clean_btn"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/coroutines_clean"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>