<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arc_input_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text="@string/arc_test_activity_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/arc_test_result" />

</LinearLayout>